# vassis-convo

./: .gitignore  README.md  docker-compose-aws-sts.yml  package.json
asterisk/conf/: extensions.conf  pjsip.aor.conf  pjsip.conf
aws-service/: .dockerignore  Dockerfile  index.js  package-lock.json  package.json
sts_server/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  salesforce_handler.py  server.py  serverK.py  user_info.py
