[project]
name = "vad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amazon-transcribe>=0.6.4",
    "boto3>=1.39.14",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "websockets>=15.0.1",
]
